Improve functionality for checking Java builder aliveness